--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.name %></h1>
 <p>
   <img src="<%= gravatar_for @user %>"/>
-  <%= @user.name %>
+  <%= @user.name %> [<%= @user.level %>]
 </p>
 
 <% form_settings = {:multipart => true} %>
