--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 
 <!-- TODO: Replace this with bootstrap progress bar -->
 <div style="width: 400px;height:10px;background-color:gray">
-  <div style="width: <%= @user.progress * 100 %>%;height:10px;background-color:green">
+  <div style="width: <%= @user.progress * 100 %>%;height:10px;background-color:#7FFF00">
   </div>
 </div>
 
